{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 431,
  "lineage": "63e979fe-5967-e937-15d0-79a03469af57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ad26549a6fb7149",
            "association_id": "eipassoc-02577dbe7bbd1c710",
            "domain": "vpc",
            "id": "eipalloc-07ad26549a6fb7149",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8be75e9e65cd804",
            "private_dns": "ip-10-40-1-41.ec2.internal",
            "private_ip": "10.40.1.41",
            "public_dns": "ec2-52-86-252-140.compute-1.amazonaws.com",
            "public_ip": "52.86.252.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privateserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-01d24f3b97fa45f8a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-01d24f3b97fa45f8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b1de2bf77d2d1333",
            "private_dns": "ip-10-40-4-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.4.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6f1998049d769d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a539981ca5407ca8",
            "tags": {
              "Name": "prod-jenkinsprivateserver"
            },
            "tags_all": {
              "Name": "prod-jenkinsprivateserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1f8ed7206e8b2cf"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-0f41d466311ae96c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-0f41d466311ae96c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a903f41ec9c2705",
            "private_dns": "ip-10-40-5-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.5.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b27bf84cd23444ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c5daeb032f1a2cb",
            "tags": {
              "Name": "prod-jenkinsprivateserver"
            },
            "tags_all": {
              "Name": "prod-jenkinsprivateserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1f8ed7206e8b2cf"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-0a95915b3baf28f29",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role",
            "id": "i-0a95915b3baf28f29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a913db9395d501f",
            "private_dns": "ip-10-40-1-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.1.213",
            "public_dns": "ec2-44-214-43-94.compute-1.amazonaws.com",
            "public_ip": "44.214.43.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b8e358c03430b39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cdc640d4181c69e7",
            "tags": {
              "Name": "prod-jenkinsserver"
            },
            "tags_all": {
              "Name": "prod-jenkinsserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1f8ed7206e8b2cf"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:internet-gateway/igw-0e087fb24c28173e1",
            "id": "igw-0e087fb24c28173e1",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "networklb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:loadbalancer/net/grahanlb/421fd1ef857b59c8",
            "arn_suffix": "net/grahanlb/421fd1ef857b59c8",
            "dns_name": "grahanlb-421fd1ef857b59c8.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:679309468658:loadbalancer/net/grahanlb/421fd1ef857b59c8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "grahanlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c99c75f5dd05b99"
              },
              {
                "subnet_id": "subnet-0cdc640d4181c69e7"
              }
            ],
            "subnets": [
              "subnet-08c99c75f5dd05b99",
              "subnet-0cdc640d4181c69e7"
            ],
            "vpc_id": "vpc-0cbef06ecceb5fc70",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ram",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:listener/net/grahanlb/421fd1ef857b59c8/5e6bd3e6a7707328",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:679309468658:listener/net/grahanlb/421fd1ef857b59c8/5e6bd3e6a7707328",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:loadbalancer/net/grahanlb/421fd1ef857b59c8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.networklb",
            "aws_lb_target_group.dev",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2",
            "arn_suffix": "targetgroup/devtg/1ae48cfbae2dd5a2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:679309468658:loadbalancer/net/grahanlb/421fd1ef857b59c8"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devtg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "prod-tg"
            },
            "tags_all": {
              "Name": "prod-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2-20240323123729552800000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2",
            "target_id": "i-0a95915b3baf28f29"
          },
          "dependencies": [
            "aws_instance.publicserver",
            "aws_lb_target_group.dev",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachtg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2-20240323124252593300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:679309468658:targetgroup/devtg/1ae48cfbae2dd5a2",
            "target_id": "i-01d24f3b97fa45f8a"
          },
          "dependencies": [
            "aws_instance.privateserver",
            "aws_lb_target_group.dev",
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ad26549a6fb7149",
            "association_id": "eipassoc-02577dbe7bbd1c710",
            "connectivity_type": "public",
            "id": "nat-0321b1ad06623f3d8",
            "network_interface_id": "eni-0b8be75e9e65cd804",
            "private_ip": "10.40.1.41",
            "public_ip": "52.86.252.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cdc640d4181c69e7",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-01e7b120155fcea12",
            "id": "rtb-01e7b120155fcea12",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0321b1ad06623f3d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-ngw"
            },
            "tags_all": {
              "Name": "prod-ngw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.gw",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-08dd43046bdf0d610",
            "id": "rtb-08dd43046bdf0d610",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e087fb24c28173e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-publicrt"
            },
            "tags_all": {
              "Name": "prod-publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dee72da89728378",
            "route_table_id": "rtb-01e7b120155fcea12",
            "subnet_id": "subnet-0a539981ca5407ca8"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.gw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2220a5b1570b2cf",
            "route_table_id": "rtb-01e7b120155fcea12",
            "subnet_id": "subnet-01c5daeb032f1a2cb"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.gw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef1bfb9b0bcf6e32",
            "route_table_id": "rtb-01e7b120155fcea12",
            "subnet_id": "subnet-0664905708ae7cec9"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.gw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b70b6725abd08b1f",
            "route_table_id": "rtb-08dd43046bdf0d610",
            "subnet_id": "subnet-0cdc640d4181c69e7"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac21078604eb024f",
            "route_table_id": "rtb-08dd43046bdf0d610",
            "subnet_id": "subnet-08c99c75f5dd05b99"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebc0e7ceff946f4e",
            "route_table_id": "rtb-08dd43046bdf0d610",
            "subnet_id": "subnet-01dc3078220bbaf88"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:security-group/sg-0d1f8ed7206e8b2cf",
            "description": "allow all rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1f8ed7206e8b2cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "prod-sg",
            "name_prefix": "",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg"
            },
            "tags_all": {
              "Name": "prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0a539981ca5407ca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a539981ca5407ca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesubnets1"
            },
            "tags_all": {
              "Name": "prod-privatesubnets1"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-01c5daeb032f1a2cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5daeb032f1a2cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesubnets2"
            },
            "tags_all": {
              "Name": "prod-privatesubnets2"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0664905708ae7cec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.40.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0664905708ae7cec9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesubnets3"
            },
            "tags_all": {
              "Name": "prod-privatesubnets3"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0cdc640d4181c69e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdc640d4181c69e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsubnets1"
            },
            "tags_all": {
              "Name": "prod-publicsubnets1"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-08c99c75f5dd05b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c99c75f5dd05b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsubnets2"
            },
            "tags_all": {
              "Name": "prod-publicsubnets2"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-01dc3078220bbaf88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.40.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc3078220bbaf88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsubnets3"
            },
            "tags_all": {
              "Name": "prod-publicsubnets3"
            },
            "vpc_id": "vpc-0cbef06ecceb5fc70"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:vpc/vpc-0cbef06ecceb5fc70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-06bddd3e25ca809d3",
            "default_route_table_id": "rtb-044489117c2ead2da",
            "default_security_group_id": "sg-01193e55863c73e2f",
            "dhcp_options_id": "dopt-03d16827be5e7d9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbef06ecceb5fc70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044489117c2ead2da",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}